--- a/projects/BUS619.md
+++ b/projects/BUS619.md
@@ -7,7 +7,7 @@ permalink: projects/BUS619
 # All dates must be YYYY-MM-DD format!
 date: 2018-07-01
 labels:
-  - Business Statistics and Data Analytics
+  - Analytics Course
 summary: Course materials for Introduction to Business Statistics and Data Analytics
 ---
 
